# mydict

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  justfile
.github/workflows/: build.yml
i18n/en/: mydict.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs  core.rs  dict.rs  i18n.rs  lib.rs  main.rs  utils.rs
src/app/: tasks.rs  utils.rs
src/core/: config.rs  dict.rs  font.rs  i18n.rs
src/core/dict/: dictionary.rs  lazydict.rs  odict.rs  trie.rs
