[package]
name = "mydict"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A simple fast dictionary"
repository = "https://github.com/jaxvanyang/mydict"

[features]
default = ["xdg-portal"]
xdg-portal = ["libcosmic/xdg-portal"]
rfd = ["libcosmic/rfd"]

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
directories = "6.0.0"
futures-util = "0.3.31"
i18n-embed-fl = "0.10.0"
odict = "~2.9.0"
open = "5.3.3"
rust-embed = "8.11.0"
tokio = { version = "1.47.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
anyhow = "1"
url = "2.5.7"

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
	# Accessibility support
	"a11y",
	# Uses cosmic-settings-daemon to watch for config file changes
	"dbus-config",
	# Support creating additional application windows.
	"multi-window",
	# On app startup, focuses an existing instance if the app is already open
	"single-instance",
	# Uses tokio as the executor for the runtime
	"tokio",
	# Windowing support for X11, Windows, Mac, & Redox
	"winit",
	# Add Wayland support to winit
	"wayland",
	# GPU-accelerated rendering
	"wgpu",
	# Enable about widget
	"about",
	"markdown",
	# Required by markdown
	"highlighter",
]
